RESOLVED FIXED239271
Fix for accessibility/table-add-remove-rows.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=239271
Summary Fix for accessibility/table-add-remove-rows.html in isolated tree mode.
Andres Gonzalez
Reported 2022-04-12 18:59:55 PDT
Fix for accessibility/table-add-remove-rows.html in isolated tree mode.
Attachments
Patch (11.57 KB, patch)
2022-04-12 19:14 PDT, Andres Gonzalez
no flags
Patch (11.57 KB, patch)
2022-04-13 12:21 PDT, Andres Gonzalez
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2022-04-12 19:00:06 PDT
Andres Gonzalez
Comment 2 2022-04-12 19:14:09 PDT
chris fleizach
Comment 3 2022-04-13 09:34:36 PDT
Comment on attachment 457499 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=457499&action=review > Source/WebCore/ChangeLog:12 > + table properties when the children of a table object change. change > changes. > Source/WebCore/ChangeLog:14 > + update properties that can change as the result od children changes for od > of
Andres Gonzalez
Comment 4 2022-04-13 12:21:15 PDT
EWS
Comment 5 2022-04-13 13:12:15 PDT
Committed r292825 (249601@main): <https://commits.webkit.org/249601@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457557 [details].
Note You need to log in before you can comment on or make changes to this bug.