Fix for accessibility/table-add-remove-rows.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=239271 <rdar://problem/91663287>

Reviewed by Chris Fleizach.

Test: accessibility/table-add-remove-rows.html

Added AXIsolatedTree::updateTableProperties() to recalculate all cached
table properties when the children of a table object change.
AXIsolatedTree::updateChildren now calls updateRelatedProperties to
update properties that can change as the result of children changes for
specific types of objects like tables, trees and treeitems.
Moved and renamed idsForObjects as axIDs() so that it can be used across
the board.

* accessibility/AccessibilityObjectInterface.h:
(WebCore::axIDs):
(WebCore::AXCoreObject::childrenIDs):
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::setObjectVectorProperty):
(WebCore::AXIsolatedObject::setSelectedChildren):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):
(WebCore::AXIsolatedTree::updateTableProperties):
(WebCore::AXIsolatedTree::updateTreeItemProperties):
(WebCore::AXIsolatedTree::updateRelatedProperties):
(WebCore::AXIsolatedTree::updateChildren):
(WebCore::AXIsolatedTree::idsForObjects const): Moved to AccessibilityObjectInterface.h as axIDs().
* accessibility/isolatedtree/AXIsolatedTree.h:

Canonical link: https://commits.webkit.org/249601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292825 268f45cc-cd09-0410-ab3c-d52691b4dbfc